--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="landing-header">
               <div>
                 <div class="landing-title">Selamat! Akses Terbuka</div>
-                <div style="font-family:var(--font-mono);opacity:0.8;margin-top:6px">Anda berhasil melewati sistem keamanan.</div>
+                <div style="font-family:var(--font-mono);opacity:0.8;margin-top:6px">berhasil melewati sistem keamanan.</div>
               </div>
               <div style="display:flex;gap:12px;align-items:center;flex-wrap:wrap">
                 <button class="landing-cta" id="go-to-site">Kunjungi Situs Utama</button>
@@ -110,9 +110,9 @@
               <div class="card">
                 <h3>Menu Utama</h3>
                 <ul class="menu-links">
-                  <li><a href="https://example.com/dashboard" target="_blank">Dashboard</a></li>
-                  <li><a href="https://example.com/profile" target="_blank">Profil Pengguna</a></li>
-                  <li><a href="https://example.com/settings" target="_blank">Pengaturan</a></li>
+                  <li><a href="https://example.com/beranda" target="_blank">Beranda</a></li>
+                  <li><a href="https://example.com/projects" target="_blank">Projects</a></li>
+                  <li><a href="https://example.com/layanan" target="_blank">Layanan</a></li>
                 </ul>
               </div>
               <div class="card">
@@ -128,12 +128,12 @@
                 <ul class="menu-links">
                   <li><a href="https://example.com/help" target="_blank">Bantuan</a></li>
                   <li><a href="https://example.com/support" target="_blank">Dukungan</a></li>
-                  <li><a href="https://example.com/about" target="_blank">Tentang Kami</a></li>
+                  <li><a href="https://example.com/doc" target="_blank">Dokumentasi Internal</a></li>
                 </ul>
               </div>
               <div class="card">
                 <h3>Kontak</h3>
-                <p>Email: admin@example.com<br/>Tel: +62 812 3456 7890</p>
+                <p>Email: kopisudut001@gmail.com<br/>Tel: +62 8811 811 033</p>
               </div>
             </div>
           </div>
